# master

./: pyproject.toml
src/mercado_financeiro/: analise_acoes.py  analise_acoes_gcp.py  analise_dividendos.py
